<resources>
    <string name="app_name">MiniPoll</string>
    <string name="title_activity_connexion">ConnexionActivity</string>
    <string name="btn_nouveau">Nouveau</string>
    <string name="btn_mes_sondages">Mes sondages</string>
    <string name="btn_aider_un_ami">Aider un ami</string>
    <string name="btn_mes_questionnaires">Mes questionnaires</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="demande_d_aide_un_ami">Demande d\'aide à un ami</string>
    <string name="sondage">Sondage</string>
    <string name="nouveau">Nouveau</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="title_activity_new_sondage">NewSondageActivity</string>
    <string name="nouveau_sondage">Nouveau Sondage</string>
    <string name="inviter_des_amis">Inviter des Amis</string>
    <string name="mail">Mail:</string>
    <string name="mot_de_passe">Mot de passe:</string>
    <string name="entrez_le_mail">Entrez le mail</string>
    <string name="entrez_le_password">Entrez le mot de passe</string>
    <string name="inscription">Inscription</string>
    <string name="connexion">connexion</string>
    <string name="imagepoll">ImagePoll</string>
    <string name="interrogation">\?</string>
    <string name="gestion_des_amis">Gestion des amis</string>
    <string name="chercher_des_amis">Chercher des amis</string>
    <string name="demandes_d_amis">Demandes d\'amis</string>
    <string name="liste_des_amis">Liste des amis</string>
    <string name="mailoupassincorr">Mail ou mot de passe incorrect</string>

    <!-- Questionnaire -->
    <string name="myquestnr">Mes Questionnaires</string>
    <string name="creation_d_un_compte">Creation d\'un compte</string>
    <string name="entrez_l_adresse_mail">Entrez l\'adresse mail</string>
    <string name="entrez_le_mot_de_passe">Entrez le mot de passe</string>
    <string name="confirmez_le_mot_de_passe">Confirmez le mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="maildeuxpoints">Mail :</string>
    <string name="mot_de_passedeuxpoints">Mot de passe :</string>
    <string name="confirmation">Confirmation :</string>
    <string name="maildejautilise">Cet adresse e-mail est déjà utilisée</string>
    <string name="motsdepassesdiff">Les mots de passe ne correspondent pas</string>
    <string name="choisirdonnees">Veuillez remplir tous les champs</string>
    <string name="choisirquestions">Veuillez remplir toutes les questions</string>
    <string name="Profilcree">Profil créé avec succès</string>
    <string name="modification_du_profil">Modification du profil</string>
    <string name="photo_de_profil">Photo de profil :</string>
    <string name="nom">Nom :</string>
    <string name="entrez_votre_nouveau_nom">Entrez votre nouveau nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="entrez_votre_nouveau_pr_nom">Entrez votre nouveau prénom</string>
    <string name="mail_2p">Mail :</string>
    <string name="entrez_votre_nouveau_mail">Entrez votre nouveau mail</string>
    <string name="pass_2p">Mot de passe</string>
    <string name="modifier_les_changements">Modifier les changements</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="mailentrevide">Le mail entré est vide</string>
    <string name="nomentrevide">Le nom entré est vide</string>
    <string name="prenomentrevide">Le prénom entré est vide</string>
    <string name="modireussie">Modification réussie</string>
    <string name="veuillezremplir">Veuillez remplir tous les champs</string>
    <string name="mdpincorr">Mot de passe saisi incorrect</string>
    <string name="title_qst">Mes Questions</string>

    <!-- dilemme -->
    <string name="nouveau_dilemme">Nouvelle demande d\'aide</string>
    <string name="inviter_un_ami">Inviter un ami</string>
    <string name="Titre">Titre</string>
    <string name="title_reponse">Mes Réponses</string>
    <string name="Reponse_is_over">Vous avez déjà répondu à la question</string>

    <!-- Sondage -->
    <string name="entrez_une_reponse">Veuillez sélectionner une proposition</string>
    <string name="sondage_cloture">Le sondage a été cloturé</string>


</resources>
