<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    tools:context="be.lsinf1225.minipoll.activity.MainActivity">

    <TextView
        android:id="@+id/tv_text_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/mail"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/et_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poll"
        app:layout_constraintVertical_bias="1.0"
        android:layout_marginLeft="16dp" />


    <EditText
        android:id="@+id/et_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text_login"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/entrez_le_mail"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/tv_text_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_text_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_mail"
        android:layout_marginStart="16dp"
        android:text="@string/mot_de_passe"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="16dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_text_password"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/entrez_le_password"
        android:inputType="textPassword"
        android:shadowColor="@color/colorWhite"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btn_connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_connexion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/connexion"
        app:layout_constraintBottom_toTopOf="@+id/btn_inscription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_inscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_connexion"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:text="@string/inscription"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/poll"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/imagepoll"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poll" />

</android.support.constraint.ConstraintLayout>
