<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="be.lsinf1225.minipoll.activity.GestionAmisActivity">

    <Button
        android:id="@+id/liste"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/liste_des_amis"
        app:layout_constraintBottom_toTopOf="@+id/demandes"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/chercher"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/chercher_des_amis"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/gestion"
        android:layout_width="257dp"
        android:layout_height="100dp"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:text="@string/gestion_des_amis"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/demandes"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/demandes_d_amis"
        app:layout_constraintBottom_toTopOf="@+id/chercher"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints" />


</android.support.constraint.ConstraintLayout>
