<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <QuickContactBadge
        android:id="@+id/quickContactBadge2"
        android:layout_width="80dp"
        android:layout_height="84dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_marginLeft="16dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/btn_mes_questionnaires"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/btn_aider_un_ami"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/btn_nouveau"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <QuickContactBadge
        android:id="@+id/quickContactBadge"
        android:layout_width="80dp"
        android:layout_height="84dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="257dp"
        android:layout_height="42dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="60dp"
        android:layout_marginStart="60dp"
        android:text="@string/btn_mes_sondages"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>