<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="be.lsinf1225.minipoll.NouveauActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/questionnaire"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="16dp"
        android:text="@string/sondage"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="224dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="104dp"
        android:layout_marginEnd="16dp"
        android:text="@string/demande_d_aide_un_ami"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="74dp"
        android:layout_marginStart="64dp"
        android:text="@string/nouveau"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="64dp" />
<!--
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="62dp"
        android:layout_height="62dp"
        android:layout_marginBottom="204dp"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/poll"
        android:layout_marginLeft="24dp" />
-->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        android:layout_marginLeft="16dp" />
<!--
    <TextView
        android:id="@+id/textView4"
        android:layout_width="61dp"
        android:layout_height="95dp"
        android:layout_marginBottom="45dp"
        android:layout_marginStart="24dp"
        android:text="?"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        android:textSize="80"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="24dp" />
-->
</android.support.constraint.ConstraintLayout>
