<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.NewDilemmeActivity">

    <TextView
        android:id="@+id/tv_nouveau_dilemme"
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/nouveau_dilemme"
        android:textColor="@color/colorWhite"
        android:textSize="32sp"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_nouveau_dilemme">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp">


            <TextView
                android:id="@+id/nouveau_dilemme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_inviter_ami"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inviter_un_ami" />

            <EditText
                android:id="@+id/et_Titre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Titre"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <TextView
                android:id="@+id/tv_proposition1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />




        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>